--- a/DisasterAlleviation/appsettings.json
+++ b/DisasterAlleviation/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=tcp:djpromofly.database.windows.net,1433;Initial Catalog=djpromo;Persist Security Info=False;User ID=djadmin;Password=Mvus3n1@40;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DefaultConnection": "Server=tcp:thando.database.windows.net,1433;Initial Catalog=Sihle;Persist Security Info=False;User ID=weadmin;Password=Mvus3n1@40;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
 
   "Logging": {
@@ -11,4 +11,3 @@
   },
   "AllowedHosts": "*"
 }
-
