--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,7 @@
 trigger:
   branches:
     include:
-      - develop
-      - master
+      - main
 
 pool:
   vmImage: 'windows-latest'
@@ -11,21 +10,30 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+# Install .NET SDK
 - task: UseDotNet@2
   inputs:
     packageType: 'sdk'
-    version: '8.0.x'
-    installationPath: $(Agent.ToolsDirectory)/dotnet
+    version: '7.0.x'
 
-- script: dotnet restore
-  displayName: 'Restore NuGet packages'
+# Restore NuGet packages
+- task: NuGetCommand@2
+  inputs:
+    restoreSolution: '**/*.sln'
 
-- script: dotnet build --configuration $(buildConfiguration) --no-restore
-  displayName: 'Build Project'
+# Build solution
+- task: VSBuild@1
+  inputs:
+    solution: '**/*.sln'
+    configuration: '$(buildConfiguration)'
 
-- script: dotnet test --no-build --verbosity normal
-  displayName: 'Run Tests'
+# Run tests (unit, integration, model)
+- task: VSTest@2
+  inputs:
+    platform: 'any cpu'
+    configuration: '$(buildConfiguration)'
 
+# Publish artifacts for release
 - task: PublishBuildArtifacts@1
   inputs:
     PathtoPublish: '$(Build.ArtifactStagingDirectory)'
